--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.400.0",
+    "motion": "^12.34.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
