--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.18.2",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.400.0",
     "motion": "^12.34.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
