--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kumlesh-kumar-portfolio",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "private": true,
   "description": "Production-grade portfolio for Kumlesh Kumar - Junior ML Engineer",
   "scripts": {
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.12.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
